# CAPSTONE-2

./: .gitignore  README.md  dependencies.txt  pyproject.toml  test.py
ACPPS/: assignments_semester_2.csv  db.sqlite3  manage.py  testing.sqlite3  user_models.dot
ACPPS/ACPPS/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ACPPS/academics/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
ACPPS/academics/migrations/: 0001_initial.py  0002_faculty_alter_department_school_department_faculty_and_more.py  0003_programmepreferencegroup.py  0004_semester.py  0005_alter_semester_options.py
ACPPS/api/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
ACPPS/api/migrations/: 0001_initial.py  0002_originaltopic_standardisedtopic_delete_topicmapping.py  0003_remove_standardisedtopic_original_topics_and_more.py
ACPPS/dashboards/: urls.py  views.py
ACPPS/data/: cgpt_sentences.csv  claude_sentences.csv  gemini_standardization_map.json  student_sentence_prompt.txt  supervisor_assignments_statistics.csv  supervisors_list.csv
ACPPS/post_test/: models.py  urls.py  views.py
ACPPS/post_test/migrations/: 0001_initial.py
ACPPS/static/js/: ajax_coordinator.js  coordinator_tasks.js  label_preferences_filter.js  profile_update.js
ACPPS/templates/: base.html  home.html
ACPPS/templates/academics/: academics_base.html  base_academics.html  department_form.html  department_list.html  faculty_form.html  faculty_list.html  generic_delete_confirm.html  generic_form.html  generic_list.html  (+7 more)
ACPPS/users/: admin.py  forms.py  models.py  urls.py  views.py
Algorithm/: classification_reports(DO NOT CHANGE).txt
Algorithm/data/: cgpt_sentences.csv  claude_sentences.csv  gemini_standardisation_map.json  linkedin_sentences.csv  supervisors_standardised_gemini.csv  unique_standardised_topics.csv
src/: DELETE_THIS_data.csv  DELETE_THIS_reports.txt  DELETE_THIS_summary_report.txt  TEST_reports.txt  bert.ipynb  doc.py  final_year_project_topic_classifier.ipynb  gemini.ipynb  gemini_standardization_map.json  grid_search_complete_results.csv  grid_search_summary_report.txt  main.py  negative.csv  optimal_matching.ipynb  positive.csv  run_2_grid_search_summary_report.txt  run_4_pareto_front_data.csv  run_5_grid_search_summary_report.txt  run_5_pareto_front_data.csv  scraper.py  sentence.py  supervisors_standardized_gemini.csv
src/data/: cgpt_sentences.csv  claude_sentences.csv  d2v.model  data_all_topics.csv  data_initial_topics.csv  deepseek_sentences.csv  filtered_combined_topics_threshold_0.5.csv  filtered_combined_topics_threshold_0.6.csv  filtered_combined_topics_threshold_0.7.csv  filtered_combined_topics_threshold_0.8.csv  filtered_combined_topics_threshold_0.9.csv  filtered_topics.csv  filtered_topics.txt  filtered_topics_staff_profiles.csv  filtered_topics_threshold_0.5.csv  filtered_topics_threshold_0.6.csv  filtered_topics_threshold_0.7.csv  filtered_topics_threshold_0.8.csv  filtered_topics_threshold_0.9.csv  gemini_labeled_preferences.csv  gemini_sentences.csv  gemini_standardisation_map.json  linkedin_sentences.csv  no_topics_sentences.csv  processed_supervisors_list.csv  staff_profiles.csv  student_sentence_prompt.txt  supervisors_list.csv  supervisors_standardised_gemini.csv  unique_standardised_topics.csv
(+39 files in other folders)
