[project]
name = "capstone-2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.6.0",
    "annotated-types==0.7.0",
    "asgiref==3.8.1",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "blis==1.3.0",
    "catalogue==2.0.10",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "cloudpathlib==0.21.0",
    "cloudscraper==1.2.71",
    "colorama==0.4.6",
    "comm==0.2.2",
    "confection==0.1.5",
    "cymem==2.0.11",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "django==5.2.1",
    "en-core-web-sm",
    "executing==2.2.0",
    "filelock==3.18.0",
    "fsspec==2025.3.2",
    "h11==0.16.0",
    "huggingface-hub==0.31.2",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "keybert==0.9.0",
    "langcodes==3.5.0",
    "language-data==1.3.0",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "murmurhash==1.0.12",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==2.2.5",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pillow==11.2.1",
    "pip==25.0.1",
    "platformdirs==4.3.7",
    "preshed==3.0.9",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "pulp==3.1.1",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywin32==310",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "selenium==4.31.0",
    "sentence-transformers==4.1.0",
    "setuptools==80.4.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.1.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "spacy==3.8.6",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "sqlparse==0.5.3",
    "srsly==2.5.1",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "thinc==8.3.6",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.51.3",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typer==0.15.3",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "undetected-chromedriver==3.5.5",
    "urllib3==2.4.0",
    "uv==0.7.3",
    "wasabi==1.1.3",
    "wcwidth==0.2.13",
    "weasel==0.4.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "wsproto==1.2.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
